src/test/compile-fail/bang-tailexpr.rs
// error-pattern: some control paths may return
fn f() -> ! { 3 }
fn main(){}
